--- a/3d-react-portfolio/package.json
+++ b/3d-react-portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://shinchancode.github.io/3d-react-portfolio",
+  "homepage": "https://10038-jetoapanta10.github.io/3d-react-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
